--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <head>
   </head>
   <body>
+    <embed src="//cache.armorgames.com/files/games/strike-force-heroes--17706.swf?v=1441733416" width="800" height="600" id="gamefileEmbed" name="gamefile" align="middle" wmode="window" allowfullscreen="false" allowfullscreeninteractive="false" fullscreenaspectratio="" quality="high" play="true" loop="true" menu="true" allowscriptaccess="always" flashvars="gameID=17706&amp;auth_token=8a4a3f2664e11e6d7d4941b58455112e&amp;user_id=41699983af8999619e8dc35b76520fc6" haspriority="true" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer">
   </body>
 </html>
